--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -41,4 +41,6 @@ label.dataTest=Data Test
 label.commend=Commend
 label.addRow=Add Row
 label.other=Other
+label.dateReceived=Date Received
+label.own=own
 ###seach case
