admin can edit status form

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -43,4 +43,6 @@ label.addRow=Add Row
 label.other=Other
 label.dateReceived=Date Received
 label.own=own
+label.edit=Edit
+label.scenarioPass=Pass
 ###seach case
