fix ui formcraete and edit

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,6 +6,7 @@ label.projectName=Project Name
 label.significantLevel=Significant Level 
 label.requestType=Request type
 label.contact=Contact
+label.department=Department
 label.phone=Phone
 label.objective=Objective
 label.url=URL
@@ -28,7 +29,7 @@ label.sap=SAP
 label.eai=EAI
 label.ivr=IVR/USSD
 label.etc=ETC
-label.impactassessment=Impact Assessment(Uer ที่ใช้งานระบบ)
+label.impactassessment=Impact Assessment(User ที่ใช้งานระบบ)
 label.externalimpact=External Impacts(External User)
 label.organizationimpacts=Organization Impacts(In House)
 label.userConcurrent=User Concurrent
