fix layout view

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -35,7 +35,7 @@ label.organizationimpacts=Organization Impacts(In House)
 label.userConcurrent=User Concurrent
 label.remark=Remark
 label.search=Search
-label.status=Status
+label.status=Status :
 label.user=User
 label.concurrent=Concurrent
 label.dataTest=Data Test
